better README file

--- a/README
+++ b/README
@@ -1,5 +1,34 @@
-This is a small GNU Emacs extension written in elisp that allows you to translate user data and comments in files, works well for translating comments inside /* */ // ;; structures, if there is "/*" then an error will occur, this is your problem, it is important to me that it performs the main function.
+# Emacs Translation Plugin
 
-To install, simply autoload the translastions.el file via load-file inside .emacs, or compile it and do the same
+The **Emacs Translation Plugin** is a powerful and user-friendly plugin designed for GNU Emacs. It allows users to easily translate text and comments in their code files between multiple languages. Whether you're working on multilingual projects or need to translate comments to enhance collaboration, this plugin has you covered.
 
-License: GNU Lesser General Public License 3
+---
+
+## Features
+
+- **Translate User Input**:  
+  Use `tr-en2ru` (or other similar commands) to translate any selected text or input directly within Emacs.
+  
+- **Translate Code Comments**:  
+  Use `tr-f-en2ru` (or other similar commands) to automatically translate comments in your code files while preserving their context.
+
+- **Support for Multiple Languages**:  
+  The plugin supports a wide range of languages, enabling seamless translation in both directions (e.g., `en2ru`, `ru2en`, `en2es`, and more).
+
+- **Integration with Emacs Workflow**:  
+  Effortlessly integrates with your existing Emacs setup, making translations quick and efficient.
+
+---
+
+## Installation
+
+1. Ensure you have GNU Emacs installed on your system.
+2. Download the plugin's source files.
+3. Add the following lines to your `.emacs` or `init.el` configuration file:
+
+   ```lisp
+   (load-file "path/to/folder/translations.el") 
+   ```
+
+## License
+GNU Lesser General Public License 3
